# protocol-aura

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
src/protocol_aura/: __init__.py
src/protocol_aura/agents/: __init__.py  base.py  boutique.py  shopper.py
src/protocol_aura/api/: __init__.py  main.py
src/protocol_aura/core/: __init__.py  config.py  negotiation.py
src/protocol_aura/data/: __init__.py  sample_boutiques.py
src/protocol_aura/protocol/: __init__.py  embeddings.py  messages.py  models.py
src/protocol_aura/ui/: __init__.py  dashboard.py
